@@ -1,5 +1,6 @@
 1.6.8 RC3
 ---
+- from now the format of an opengl image can be GL_ALPHA too. (only when for opengl, not usable anywhere else). it's more an hack then a solution.
 - new versions of ilReadRLE8Bmp, ilReadRLE4Bmp from Björn Ganster
 - applied submitted patch #1645286. patch for reading X offset and Y offset from TIFF files.
 - fixed lump reading bug. from Bjürn Ganster
